Resolved flexbox spacing issues, text style  and images.

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -35,7 +35,7 @@ body {
     font-size 0.7s cubic-bezier(0.61,-0.19, 0.7,-0.11),
     flex 0.7s cubic-bezier(0.61,-0.19, 0.7,-0.11),
     background 0.2s;
-  font-size: 20px;
+  font-size: 18px;
   background-size:cover;
   background-position:center;
   flex:1;
@@ -69,6 +69,9 @@ body {
       align-items: baseline;
       justify-content: center;
     }
+.panel:hover {
+  cursor: pointer;
+}
 
 .panel > *:first-child { transform: translateY(0); }
 .panel.open > *:first-child { transform: translateY(-100%); }
@@ -95,7 +98,7 @@ body {
   text-transform: uppercase;
   font-family: 'Amatic SC', cursive;
   text-shadow:0 0 4px rgba(0, 0, 0, 0.72), 0 0 14px rgba(0, 0, 0, 0.45);
-  font-size: 4em;
+  font-size: 3em;
 }
 .panel p:nth-child(1) {
   font-size: 6em;
@@ -127,7 +130,7 @@ body {
   font-size: 20px;
   padding: 10px 20px 10px 20px;
   text-decoration: none;
-  width: 25%;
+  width: 20%;
   max-height: 50px;
   z-index: 100;
   position: absolute;
@@ -137,7 +140,7 @@ body {
 .panel.open .btn {
   bottom: 1%;
   align-self: center;
-
+  max-width: 15%;
 }
 .btn:hover {
   background: #c7d3db;
@@ -158,22 +161,68 @@ body {
 .momGift {
   display: flex;
   flex-wrap: wrap;
-  align-items: baseline;
-  /*border: 1px solid black;*/
+  align-items: center;
+  width: auto;
+  flex-direction: column;
+  justify-content: center;
+}
+.momGift .logo {
+  margin-top: 3%;
 }
 
+.momGift > h2 {
+  width: 100%;
+  font-size: 3em;
+  font-weight: bold;
+  margin: 40px 0 0 40px;
+  flex: 2;
+}
+
+/* header */
 .momGift-header {
   background: rgb(141,141,141);
   width: 100%;
   margin-top: 0;
-  min-height: 100px;
+  min-height: 150px;
   display: flex;
+  font-style: oblique;
+  color: rgb(255,198,0);
+
 }
 .momGift-header h3 {
   align-self: flex-end;
+  margin-left: 15%;
+  font-size: 2em;
 }
-.momGift p {
-  flex: 1 0 auto;
-  font-size: 20px;
-  max-width: 80%;
+.momGift-header h1 {
+  margin-left: 10px;
+  text-shadow: #CCC 1px 0 15px;
+}
+.momGift-body {
+  margin-top: 5%;
+  width: 90%;
+  display: flex;
+  height: auto;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: center;
+}
+
+.momGift-body img {
+  border: 3px solid black;
+  width: 20%;
+  padding: 10px;
+  margin: 10px;
+  flex:1;
+}
+.momGift-body .text {
+  background-color: rgba(51,51,51, 0.5);
+  text-indent: 7px;
+  padding: 10px;
+  margin-left: 10px;
+  font-size: 2em;
+  max-width: 60%;
+  flex:2;
+  color: black;
+  line-height: 1.4;
 }
